# git_a_clue

./: README.md  requirements.md
git-a-clue/: .coverage  .coveragerc  pyproject.toml
git-a-clue/assets/: README.md
git-a-clue/git_a_clue/: Pipfile  ascii_func.py  classes.py  helpful_links_orig.md  intro.py  logistics.py  main_logic.py  main_logic_orig.py  main_logic_test.py  menu_logic.py  menu_logic2.py  menu_logic_bak.py  menu_logic_orig.py  move_me.py  prompt.py  prompt2.py  prompt_orig.py  prompt_test.py  py-sounds.py  test_git_a_clue.py  test_infinite_loop.py
git-a-clue/git_a_clue/assets/: ascii_chalk_outline.py  menu logic.py  rules.txt  welcome_laptop.py
git-a-clue/git_a_clue/assets_animation/: animation_0.txt  animation_1.txt  animation_2.txt  animation_3.txt  animation_4.txt  animation_5.txt
git-a-clue/git_a_clue/assets_ascii/: cf_floorplan.txt  clue_comp.txt  donut.txt  ethernet_cord.txt  gadget_0.txt  gadget_1.txt  gadget_2.txt  gadget_5.txt  gadgets_word.txt  hand_o_cards.txt  john_inv_outline.txt  john_outline.txt  laptop.txt  murder.txt  scary_john.txt  swear_jar.txt  walk_down_hall.txt  you_are_here_frontd.txt  youare_0.txt  youare_1.txt  youare_2.txt  youare_3.txt  youare_4.txt  youare_5.txt  youare_6.txt
git-a-clue/tests/: possible_tests.py  test_final_guess.py  test_gad_accusation.py  test_git_a_clue.py  test_infinite_loop.py  test_main_logic.py  test_pick_a_player.py  test_roll_and_rooms.py  test_start-game.py  test_sus_accusation.py  test_time_to_deal.py  test_type_of_guess.py
(+2 files in other folders)
