[tool.poetry]
name = "git-a-clue"
version = "0.1.0"
description = ""
authors = ["KIMBERLY DAMALAS <kimatcamp@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.0"
playsound = "^1.2.2"
pyobjc = "^7.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
